apps/test/service-demo-1/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-demo-1
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: service-demo-1
        image: reg.garrytest.com/demo/service-demo-1:tag # {"$imagepolicy": "flux-system:ns-test-service-demo-1"}
        envFrom:
        - configMapRef:
            name: config-service-demo-1-autocd
        - configMapRef:
            name: config-base-test
      imagePullSecrets:
      - name: regkey
