apps/test/service-demo-1/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-1
spec:
  ports:
  - name: tcp-8080
    port: 8080
    targetPort: 8080
